# stack-attention

./: .gitignore  Dockerfile-dev  README.md  pyproject.toml
experiments/: include.bash
experiments/cfl/: include.bash  plot_heatmaps.bash  plot_train_and_test.bash  print_parameter_counts.bash  submit_test_jobs.bash  submit_train_jobs.bash
experiments/language-modeling/: include.bash  print_cost_table.bash  print_limited_size_table.bash  submit_limited_size_jobs.bash  submit_preprocess_data_jobs.bash
experiments/machine-translation/: include.bash  print_varying_size_table.bash  submit_download_data_jobs.bash  submit_preprocess_data_jobs.bash  submit_varying_size_jobs.bash
scripts/: build-singularity-image.bash  docker-exec.bash  download-mt.bash  generate-code-submission.bash  get-docker-image.bash  poetry-install.bash  preprocess-ptb.bash  setup.bash  singularity-shell.bash  variables.bash
scripts/download-mt/: europarl-v7.bash  newstest2016.bash  newstest2017.bash  toy.bash
src/cfl_language_modeling/: analyze_stack_attention_util.py  cfl_stack_attention_util.py  count_parameters.py  data_util.py  functions.bash  generate_test_data.py  generate_test_set.bash  model_util.py  test.py  (+16 more)
tests/: test_batching.py  test_beam_search.py  test_custom_transformer_encoder.py  test_grefenstette.py  test_joulin_mikolov.py  test_levenshtein.py  test_limited_rns_rnn.py  test_limited_vector_rns_rnn.py  test_multidim_topk.py  test_rns_rnn.py  test_stack_attention.py  test_transformer_decoder.py  test_unidirectional_transformer_encoder.py  test_vector_rns_rnn.py  test_vocab.py
(+102 files in other folders)
